--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My_Website</title>
-	<link rel="stylesheet" type="text/css" href="mycss.css">
+	<link rel="stylesheet" type="text/css" href="my_css.css">
 	<!--<div id="nav">
 		<a href="index.html">Home</a>
 		<a href="#">About</a>
